# python_web_hw_06

./: README.md  create_db.py  fill_db.py  main.py  pyproject.toml  queries.py
db/: university.db
queries/: query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_7.sql  query_8.sql
